objects/GEMS_Client_Contracted_Vendors_list__c.object
<CustomObject>
    <fields>
        <fullName>Delivered_From__c</fullName>
        <label>Delivered From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_To__c</fullName>
        <label>Delivered To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Owner_s__c</fullName>
        <label>External Owner(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GET_Case__c</fullName>
        <label>GET Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Client Contracted Vendors list</relationshipLabel>
        <relationshipName>GEMS_Client_Contracted_Vendors_lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Internal_Owner_s__c</fullName>
        <label>Internal Owner(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Status__c</fullName>
        <label>Production Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Production Ready</fullName>
                </value>
                <value>
                    <fullName>In Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_of_File__c</fullName>
        <label>Purpose of File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing_Status__c</fullName>
        <label>Testing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_Method__c</fullName>
        <label>Transfer Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GEMS Client Contracted Vendors list</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Vendor list Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS Client Contracted Vendors lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>